@@ -7,6 +7,10 @@ An overview of the relevant changes in new, and older, releases.
 Version 2.4  (or 3.0)
 ---------------------
 
+- Add missing calls to ``[super init]`` in the implementation of
+  OC_PythonUnicode and OC_PythonString (the ObjC proxies for python's
+  unicode and str types)
+
 - ``objc.addConvenienceForSelector`` is deprecated, primarily to make 
   it possible to restructure the pyobjc internals.
 
